tests mise en place mapper nettoyage ListElement