@@ -6,11 +6,11 @@ import org.springframework.data.domain.Page;
 
 import javax.transaction.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public abstract class AbstractDtoService <T extends AbstractEntity, U extends FxDto<T>> extends AbstractService<T>{
-  abstract public T convert(U dto);
-  abstract public U convert(T entity);
+  public abstract T convert(U dto);
+
+  public abstract U convert(T entity);
 
   @Transactional
   public U saveOrUpdate(U dto){
@@ -18,15 +18,15 @@ public abstract class AbstractDtoService <T extends AbstractEntity, U extends Fx
   }
 
   public List<T> convertToEntiy(List<U> dtos){
-    return dtos.stream().map(this::convert).collect(Collectors.toList());
+    return dtos.stream().map(this::convert).toList();
   }
 
   public List<U> convertToDto(List<T> entities){
-    return entities.stream().map(this::convert).collect(Collectors.toList());
+    return entities.stream().map(this::convert).toList();
   }
   
   public List<U> convertToDto(Page<T> entities){
-	    return entities.stream().map(this::convert).collect(Collectors.toList());
+	    return entities.stream().map(this::convert).toList();
 	  }
 
     @Transactional
